fix modal window

--- a/index.html
+++ b/index.html
@@ -912,7 +912,7 @@
 <div class="modal">
     <div class="modal-content">
         <div class="modal__block">
-            <span class="modal__title">modal title text</span>
+            <span class="modal__title"></span>
             <a href="" class="btn order-form-btn" id="modal-close">Закрыть</a>
         </div>
     </div>
