--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <section class="hero">
             <div class="container hero__container">
                 <header class="header">
-                    <a class="logo" href="/">
+                    <a class="logo" href="#">
                         <img class="logo__pic" src="./img/icons/logo.png" alt="">
                     </a>
                     <nav class="navbar" id="navbar">
@@ -110,7 +110,7 @@
                     <p class="hero-title__subtitle">
                         Наши батончики идеально подходят для тех, кто следит за своим здоровьем
                     </p>
-                    <a class="hero-title__btn btn" href="">заказать</a>
+                    <a class="hero-title__btn btn" href="#">заказать</a>
                 </div>
 
                 <div class="advantages">
@@ -750,11 +750,11 @@
                         <div class="form__row">
                             <label class="form__block">
                                 <div class="form__title">Имя</div>
-                                <input type="text" class="form__input" name="name" placeholder="Имя*" required/>
+                                <input type="text" class="form__input" name="name" />
                             </label>
                             <label class="form__block">
                                 <div class="form__title">Телефон</div>
-                                <input type="email" class="form__input" name="phone" placeholder="Email" required />
+                                <input type="tel" class="form__input" name="phone" />
                             </label>
                         </div>
                         <div class="form__row">
@@ -857,7 +857,7 @@
                                     <use xlink:href="./img/icons/sprite.svg#vk"></use>
                                 </svg>
                             </a>
-                            <a class="socials__link" href=""></a>
+                            <a class="socials__link" href="#"></a>
                         </li>
                         <li class="socials__item">
                             <a class="socials__link" href="#">
@@ -913,7 +913,7 @@
     <div class="modal-content">
         <div class="modal__block">
             <span class="modal__title"></span>
-            <a href="" class="btn order-form-btn" id="modal-close">Закрыть</a>
+            <a href="#" class="btn order-form-btn" id="modal-close">Закрыть</a>
         </div>
     </div>
 </div>
