add accordion section

--- a/index.html
+++ b/index.html
@@ -626,6 +626,62 @@
             </div>
         </section>
 
+        <section class=" section accordion">
+            <div class="accordion__container">
+                <div class="accordion__slide-title-container">
+                    <h2 class="accordion__slide-title">меню</h2>
+                </div>
+                <div class="accordion__slide-tabs">
+                    <div class="sizes">
+                        <ul class="sizes__list">
+                            <li class="sizes__item sizes__item_milk">
+                                <div class="sizes__item-title sizes__item-title_milk">
+                                    <span>«Батончики с молоком»</span>
+                                </div>
+                                <div class="sizes__item-description">
+                                    <p>
+                                        Рекомендуем употреблять батончики вместе с кокосовым или миндальным молоком.
+                                        Так и вкуснее, и полезнее.  Ну чего ещё хотеть от жизни? Батончик – он твой лучший друг и радует всех вокруг.
+                                        Как классно, что можно питаться полезно и вкусно, а не как попало.
+                                        Бабуля, конечно, за такую еду не похвалит, но кто её будет спрашивать – никто.
+                                        Надо бы, кстати, бабулю поздравить с днём Победы.
+                                    </p>
+                                </div>
+                            </li>
+                            <li class="sizes__item sizes__item_honey">
+                                <div class="sizes__item-title sizes__item-title_breakfast">
+                                    <span>«С медом и фруктами»</span>
+                                </div>
+                                <div class="sizes__item-description">
+                                    <p>
+                                        Рекомендуем употреблять батончики вместе с кокосовым или миндальным молоком.
+                                        Так и вкуснее, и полезнее.  Ну чего ещё хотеть от жизни? Батончик – он твой лучший друг и радует всех вокруг.
+                                        Как классно, что можно питаться полезно и вкусно, а не как попало.
+                                        Бабуля, конечно, за такую еду не похвалит, но кто её будет спрашивать – никто.
+                                        Надо бы, кстати, бабулю поздравить с днём Победы.
+                                    </p>
+                                </div>
+                            </li>
+                            <li class="sizes__item sizes__item_berries">
+                                <div class="sizes__item-title sizes__item-title_berries">
+                                    <span>«Дикие ягоды»</span>
+                                </div>
+                                <div class="sizes__item-description">
+                                    <p>
+                                        Рекомендуем употреблять батончики вместе с кокосовым или миндальным молоком.
+                                        Так и вкуснее, и полезнее.  Ну чего ещё хотеть от жизни? Батончик – он твой лучший друг и радует всех вокруг.
+                                        Как классно, что можно питаться полезно и вкусно, а не как попало.
+                                        Бабуля, конечно, за такую еду не похвалит, но кто её будет спрашивать – никто.
+                                        Надо бы, кстати, бабулю поздравить с днём Победы.
+                                    </p>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section class="section reviews-section" id="reveiws">
             <div class="container">
                 <h2 class="section__title">Отзывы</h2>
@@ -922,5 +978,6 @@
     <script src="./js/tabs.js"></script>
     <script src="./js/reviews-acco.js"></script>
     <script src="js/myForm.js"></script>
+    <script src="js/acc-menu.js"></script>
 </body>
 </html>
