--- a/index.html
+++ b/index.html
@@ -974,6 +974,8 @@
     </div>
 </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://api-maps.yandex.ru/2.1/?apikey=ваш API-ключ&lang=ru_RU"></script>
+    <script src="./js/map.js"></script>
     <script src="./js/index.js"></script>
     <script src="./js/tabs.js"></script>
     <script src="./js/reviews-acco.js"></script>
